adjusted some layout issues

--- a/style.css
+++ b/style.css
@@ -4,6 +4,6 @@ h1 {
 }
 
 img {
-    width: 10%;
+    width: 50%;
     height: auto;
 }
